[package]
name = "juno_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
uniffi_build = { version = "0.19.3", features = ["builtin-bindgen"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = "0.19.3"
uniffi_macros = "0.19.3"
